--- a/notebooks/hillary_data_exploration.ipynb
+++ b/notebooks/hillary_data_exploration.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "# from datetime import date\n"
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -974,6 +974,241 @@
    "metadata": {},
    "source": [
     "Above I have displayed the most common merchants/memo for each category."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train inflows shape: (410492, 6)\n",
+      "Test inflows shape: (102623, 6)\n",
+      "Train outflows shape: (2077990, 6)\n",
+      "Test outflows shape: (519498, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_inflows, test_inflows = train_test_split(inflows, test_size=0.2, random_state=42)\n",
+    "\n",
+    "train_outflows, test_outflows = train_test_split(outflows, test_size=0.2, random_state=42)\n",
+    "\n",
+    "print(f\"Train inflows shape: {train_inflows.shape}\")\n",
+    "print(f\"Test inflows shape: {test_inflows.shape}\")\n",
+    "print(f\"Train outflows shape: {train_outflows.shape}\")\n",
+    "print(f\"Test outflows shape: {test_outflows.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set statistics for inflows:\n",
+      "count    4.104920e+05\n",
+      "mean     7.379667e+02\n",
+      "std      5.473407e+03\n",
+      "min      1.000000e-02\n",
+      "25%      2.060000e+01\n",
+      "50%      1.000000e+02\n",
+      "75%      5.000000e+02\n",
+      "max      1.154966e+06\n",
+      "Name: amount, dtype: float64\n",
+      "\n",
+      "Test set statistics for inflows:\n",
+      "count    102623.000000\n",
+      "mean        721.632281\n",
+      "std        4520.547069\n",
+      "min           0.010000\n",
+      "25%          20.465000\n",
+      "50%         100.000000\n",
+      "75%         500.000000\n",
+      "max      627825.530000\n",
+      "Name: amount, dtype: float64\n",
+      "\n",
+      "Training set statistics for outflows:\n",
+      "count    2.077990e+06\n",
+      "mean     1.441452e+02\n",
+      "std      1.624905e+03\n",
+      "min      0.000000e+00\n",
+      "25%      9.630000e+00\n",
+      "50%      2.426000e+01\n",
+      "75%      6.641000e+01\n",
+      "max      6.548532e+05\n",
+      "Name: amount, dtype: float64\n",
+      "\n",
+      "Test set statistics for outflows:\n",
+      "count    519498.000000\n",
+      "mean        149.051013\n",
+      "std        1962.808605\n",
+      "min           0.000000\n",
+      "25%           9.620000\n",
+      "50%          24.250000\n",
+      "75%          66.170000\n",
+      "max      627825.530000\n",
+      "Name: amount, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_inflows_stats = train_inflows['amount'].describe()\n",
+    "test_inflows_stats = test_inflows['amount'].describe()\n",
+    "\n",
+    "print(\"Training set statistics for inflows:\")\n",
+    "print(train_inflows_stats)\n",
+    "\n",
+    "print(\"\\nTest set statistics for inflows:\")\n",
+    "print(test_inflows_stats)\n",
+    "\n",
+    "train_outflows_stats = train_outflows['amount'].describe()\n",
+    "test_outflows_stats = test_outflows['amount'].describe()\n",
+    "\n",
+    "print(\"\\nTraining set statistics for outflows:\")\n",
+    "print(train_outflows_stats)\n",
+    "\n",
+    "print(\"\\nTest set statistics for outflows:\")\n",
+    "print(test_outflows_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training set category distribution for inflows:\n",
+      "category\n",
+      "EXTERNAL_TRANSFER        0.305173\n",
+      "SELF_TRANSFER            0.215269\n",
+      "DEPOSIT                  0.119323\n",
+      "MISCELLANEOUS            0.108536\n",
+      "PAYCHECK                 0.064669\n",
+      "PAYCHECK_PLACEHOLDER     0.050951\n",
+      "REFUND                   0.045433\n",
+      "INVESTMENT_INCOME        0.033701\n",
+      "SMALL_DOLLAR_ADVANCE     0.026378\n",
+      "OTHER_BENEFITS           0.014875\n",
+      "TAX                      0.006658\n",
+      "LOAN                     0.004897\n",
+      "UNEMPLOYMENT_BENEFITS    0.003793\n",
+      "INSURANCE                0.000346\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Test set category distribution for inflows:\n",
+      "category\n",
+      "EXTERNAL_TRANSFER        0.304630\n",
+      "SELF_TRANSFER            0.215069\n",
+      "DEPOSIT                  0.120480\n",
+      "MISCELLANEOUS            0.108114\n",
+      "PAYCHECK                 0.064235\n",
+      "PAYCHECK_PLACEHOLDER     0.050398\n",
+      "REFUND                   0.044532\n",
+      "INVESTMENT_INCOME        0.034018\n",
+      "SMALL_DOLLAR_ADVANCE     0.027216\n",
+      "OTHER_BENEFITS           0.015611\n",
+      "TAX                      0.006548\n",
+      "LOAN                     0.004901\n",
+      "UNEMPLOYMENT_BENEFITS    0.003937\n",
+      "INSURANCE                0.000312\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Training set category distribution for outflows:\n",
+      "category\n",
+      "GENERAL_MERCHANDISE    2.019028e-01\n",
+      "FOOD_AND_BEVERAGES     1.856328e-01\n",
+      "EXTERNAL_TRANSFER      1.235155e-01\n",
+      "GROCERIES              8.454997e-02\n",
+      "AUTOMOTIVE             8.023426e-02\n",
+      "ATM_CASH               4.529810e-02\n",
+      "UNCATEGORIZED          4.525431e-02\n",
+      "LOAN                   3.494868e-02\n",
+      "ENTERTAINMENT          3.111709e-02\n",
+      "ESSENTIAL_SERVICES     2.961708e-02\n",
+      "CREDIT_CARD_PAYMENT    2.904826e-02\n",
+      "SELF_TRANSFER          2.819118e-02\n",
+      "TRAVEL                 2.302417e-02\n",
+      "HEALTHCARE_MEDICAL     1.565840e-02\n",
+      "ACCOUNT_FEES           1.446542e-02\n",
+      "INSURANCE              1.158860e-02\n",
+      "PETS                   3.572202e-03\n",
+      "HOME_IMPROVEMENT       3.300786e-03\n",
+      "GIFTS_DONATIONS        1.805591e-03\n",
+      "EDUCATION              1.739662e-03\n",
+      "OVERDRAFT              1.301739e-03\n",
+      "RENT                   1.202604e-03\n",
+      "TAX                    1.201161e-03\n",
+      "BNPL                   6.049115e-04\n",
+      "MORTGAGE               4.311859e-04\n",
+      "PAYCHECK               4.071242e-04\n",
+      "CHILD_DEPENDENTS       3.768064e-04\n",
+      "BILLS_UTILITIES        9.143451e-06\n",
+      "AUTO_LOAN              4.812343e-07\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Test set category distribution for outflows:\n",
+      "category\n",
+      "GENERAL_MERCHANDISE    0.201177\n",
+      "FOOD_AND_BEVERAGES     0.185277\n",
+      "EXTERNAL_TRANSFER      0.123839\n",
+      "GROCERIES              0.083998\n",
+      "AUTOMOTIVE             0.080564\n",
+      "ATM_CASH               0.045278\n",
+      "UNCATEGORIZED          0.044988\n",
+      "LOAN                   0.035269\n",
+      "ENTERTAINMENT          0.031230\n",
+      "ESSENTIAL_SERVICES     0.030016\n",
+      "CREDIT_CARD_PAYMENT    0.029151\n",
+      "SELF_TRANSFER          0.028297\n",
+      "TRAVEL                 0.022720\n",
+      "HEALTHCARE_MEDICAL     0.015985\n",
+      "ACCOUNT_FEES           0.014345\n",
+      "INSURANCE              0.011863\n",
+      "PETS                   0.003548\n",
+      "HOME_IMPROVEMENT       0.003351\n",
+      "GIFTS_DONATIONS        0.001861\n",
+      "EDUCATION              0.001702\n",
+      "TAX                    0.001328\n",
+      "OVERDRAFT              0.001311\n",
+      "RENT                   0.001247\n",
+      "BNPL                   0.000551\n",
+      "MORTGAGE               0.000429\n",
+      "PAYCHECK               0.000373\n",
+      "CHILD_DEPENDENTS       0.000295\n",
+      "BILLS_UTILITIES        0.000008\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_inflows_category_dist = train_inflows['category'].value_counts(normalize=True)\n",
+    "test_inflows_category_dist = test_inflows['category'].value_counts(normalize=True)\n",
+    "\n",
+    "print(\"\\nTraining set category distribution for inflows:\")\n",
+    "print(train_inflows_category_dist)\n",
+    "\n",
+    "print(\"\\nTest set category distribution for inflows:\")\n",
+    "print(test_inflows_category_dist)\n",
+    "\n",
+    "train_outflows_category_dist = train_outflows['category'].value_counts(normalize=True)\n",
+    "test_outflows_category_dist = test_outflows['category'].value_counts(normalize=True)\n",
+    "\n",
+    "print(\"\\nTraining set category distribution for outflows:\")\n",
+    "print(train_outflows_category_dist)\n",
+    "\n",
+    "print(\"\\nTest set category distribution for outflows:\")\n",
+    "print(test_outflows_category_dist)"
    ]
   }
  ],
