--- a/notebooks/hillary_data_exploration.ipynb
+++ b/notebooks/hillary_data_exploration.ipynb
@@ -1210,6 +1210,54 @@
     "print(\"\\nTest set category distribution for outflows:\")\n",
     "print(test_outflows_category_dist)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def clean_text(data):\n",
+    "    df = data.copy()\n",
+    "\n",
+    "    # create the patterns\n",
+    "\n",
+    "    # pattern1 handles the dates, and the states \n",
+    "    pattern1 = r'\\b(?:CA\\s+)?(?:0?[1-9]|1[0-2])[/-](?:0?[1-9]|[12]\\d|3[01])(?:/\\d{2,4})?\\b'\n",
+    "\n",
+    "    # pattern2 handles unnecessary X's\n",
+    "    pattern2 = r'(?<!#)X+|#X+'\n",
+    "\n",
+    "    # Handles unnecessary punctuation\n",
+    "    pattern3 = r\"[^a-zA-Z0-9\\s./]\"\n",
+    "\n",
+    "    # get rid of the state at the end of the wording\n",
+    "    pattern4 = r'\\s[A-Z]{2}$'\n",
+    "\n",
+    "    # Handles \"POS WITHDRAWAL | DEBIT CARD WITHDRAWL\"\n",
+    "    pattern5 = r'(pos withdrawal|debit card withdrawal)'\n",
+    "\n",
+    "    # handles the word \"purchase\"\n",
+    "    pattern6 = r'(purchase)'\n",
+    "\n",
+    "    # make everything lower case, and get rid of unnecessary spacing between words\n",
+    "    df['memo'] = df['memo'].apply(lambda x: re.sub(pattern3, '', re.sub(pattern2, '', re.sub(pattern1, '', x))))\n",
+    "    df['memo'] = df['memo'].apply(lambda x: \" \".join(x.split()).strip())\n",
+    "    df['memo'] = df['memo'].apply(lambda x: re.sub(pattern4, '', x))\n",
+    "    df[\"memo\"] = df[\"memo\"].apply(lambda x: re.sub(pattern6, '', re.sub(pattern5, '', x.lower())))\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_df = clean_text(important_data)"
+   ]
   }
  ],
  "metadata": {
