--- a/report/report.tex
+++ b/report/report.tex
@@ -51,6 +51,8 @@ Code: \url{https://github.com/hillarychang/dsc180a-capstone}
 
 Predicting a customer's credit worthiness is an essential part of bank's usage of data today, due to loan's and credit card's profitability as well as risk. Our model aims to assign a score to each unique bank account holder to determine individual trustworthiness of credit or loans, which we will call the "Blank Score."
 
+\subsection{Exploratory Data Analysis}
+
 To start, using the data given to us from our industry partner, Prism Data, we performed Exploratory Data Analysis, analyzing what patterns could be found within the data. As shown below, some patterns include different amounts, both in total and mean spending in various weeks, days, and months, potentially showing us behaviors that consumers typically took when it comes to purchasing. For instance, we noticed that most purchases occurred on weekdays, while weekends had significantly less purchasing priority.
 
 Additionally, our analysis also focused on when the data was typically sampled, so we could correlate it to the future, and we found that the data that we were given was mostly from 2020-2023, which gave us more confidence. Data looks back and then tries to assume forward, so it's limited in what it can tell you about the world, but by using modern-day data, we can have a better, more advanced understanding of how consumers purchase and decide whether or not they are trustworthy.
