--- a/notebooks/hillary_data_exploration.ipynb
+++ b/notebooks/hillary_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "[513115 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "[2597488 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
        "528786        UNCATEGORIZED                       UNCATEGORIZED  117409"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
        "36  GENERAL_MERCHANDISE  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,7 @@
        "20   28.00  2022-12-23  GENERAL_MERCHANDISE  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1999,144 +1999,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        atm  atm cash  atm withdrawal      cash  cash deposit   deposit  \\\n",
-      "0  0.366739  0.000000        0.465162  0.000000      0.000000  0.000000   \n",
-      "1  0.000000  0.000000        0.000000  0.000000      0.000000  0.000000   \n",
-      "2  0.366739  0.465162        0.000000  0.465162      0.465162  0.465162   \n",
-      "3  0.000000  0.000000        0.000000  0.000000      0.000000  0.000000   \n",
+      "TF-IDF Matrix shape: (1306452, 500)\n",
+      "          00   10  1200   14        15   16  185  1infiniteloop   20   21  \\\n",
+      "0        0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
+      "1        0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
+      "2        0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
+      "3        0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
+      "4        0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
+      "...      ...  ...   ...  ...       ...  ...  ...            ...  ...  ...   \n",
+      "1306447  0.0  0.0   0.0  0.0  0.448528  0.0  0.0            0.0  0.0  0.0   \n",
+      "1306448  0.0  0.0   0.0  0.0  0.345006  0.0  0.0            0.0  0.0  0.0   \n",
+      "1306449  0.0  0.0   0.0  0.0  0.411850  0.0  0.0            0.0  0.0  0.0   \n",
+      "1306450  0.0  0.0   0.0  0.0  0.000000  0.0  0.0            0.0  0.0  0.0   \n",
+      "1306451  0.0  0.0   0.0  0.0  0.484216  0.0  0.0            0.0  0.0  0.0   \n",
       "\n",
-      "        fee       gas  gas station   grocery  grocery store  purchase  \\\n",
-      "0  0.465162  0.000000     0.000000  0.000000       0.000000  0.000000   \n",
-      "1  0.000000  0.000000     0.000000  0.465162       0.465162  0.366739   \n",
-      "2  0.000000  0.000000     0.000000  0.000000       0.000000  0.000000   \n",
-      "3  0.000000  0.465162     0.465162  0.000000       0.000000  0.366739   \n",
+      "         ...     wings  with  withdrawal   wm  woodland  worth  www  york  \\\n",
+      "0        ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
+      "1        ...  0.582319   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
+      "2        ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
+      "3        ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
+      "4        ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
+      "...      ...       ...   ...         ...  ...       ...    ...  ...   ...   \n",
+      "1306447  ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
+      "1306448  ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
+      "1306449  ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
+      "1306450  ...  0.000000   0.0    0.212867  0.0       0.0    0.0  0.0   0.0   \n",
+      "1306451  ...  0.000000   0.0    0.000000  0.0       0.0    0.0  0.0   0.0   \n",
       "\n",
-      "    station  station purchase     store  store purchase  withdrawal  \\\n",
-      "0  0.000000          0.000000  0.000000        0.000000    0.465162   \n",
-      "1  0.000000          0.000000  0.465162        0.465162    0.000000   \n",
-      "2  0.000000          0.000000  0.000000        0.000000    0.000000   \n",
-      "3  0.465162          0.465162  0.000000        0.000000    0.000000   \n",
+      "         youtube  zip  \n",
+      "0            0.0  0.0  \n",
+      "1            0.0  0.0  \n",
+      "2            0.0  0.0  \n",
+      "3            0.0  0.0  \n",
+      "4            0.0  0.0  \n",
+      "...          ...  ...  \n",
+      "1306447      0.0  0.0  \n",
+      "1306448      0.0  0.0  \n",
+      "1306449      0.0  0.0  \n",
+      "1306450      0.0  0.0  \n",
+      "1306451      0.0  0.0  \n",
       "\n",
-      "   withdrawal fee  \n",
-      "0        0.465162  \n",
-      "1        0.000000  \n",
-      "2        0.000000  \n",
-      "3        0.000000  \n"
+      "[1306452 rows x 500 columns]\n"
      ]
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "import pandas as pd\n",
     "\n",
-    "\n",
-    "tfidf_vectorizer = TfidfVectorizer(ngram_range=(1, 2)) \n",
+    "tfidf_vectorizer = TfidfVectorizer(ngram_range=(1, 1), max_features=500) \n",
     "\n",
     "tfidf_features = tfidf_vectorizer.fit_transform(cleaned_df['memo'])\n",
     "\n",
     "feature_names = tfidf_vectorizer.get_feature_names_out()\n",
+    "\n",
     "tfidf_df = pd.DataFrame(tfidf_features.toarray(), columns=feature_names)\n",
-    "\n",
-    "print(tfidf_df.head())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TF-IDF Matrix shape: (1306452, 705988)\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "\n",
-    "tfidf_vectorizer = TfidfVectorizer(ngram_range=(1, 2)) \n",
-    "\n",
-    "tfidf_features = tfidf_vectorizer.fit_transform(cleaned_df['memo'])\n",
     "\n",
     "print(\"TF-IDF Matrix shape:\", tfidf_features.shape)\n",
     "\n",
-    "feature_names = tfidf_vectorizer.get_feature_names_out()\n",
-    "tfidf_df = pd.DataFrame(tfidf_features.toarray(), columns=feature_names)\n",
-    "\n",
-    "print(tfidf_df.head())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tfidf_vectorizer = TfidfVectorizer(ngram_range=(1, 2), max_features=500)\n",
-    "# tfidf_features = tfidf_vectorizer.fit_transform(cleaned_df['memo'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    00   10  1200   15  15 mcc   16  185  1infiniteloop   20   21  ...  wine  \\\n",
-      "0  0.0  0.0   0.0  0.0     0.0  0.0  0.0            0.0  0.0  0.0  ...   0.0   \n",
-      "1  0.0  0.0   0.0  0.0     0.0  0.0  0.0            0.0  0.0  0.0  ...   0.0   \n",
-      "2  0.0  0.0   0.0  0.0     0.0  0.0  0.0            0.0  0.0  0.0  ...   0.0   \n",
-      "3  0.0  0.0   0.0  0.0     0.0  0.0  0.0            0.0  0.0  0.0  ...   0.0   \n",
-      "4  0.0  0.0   0.0  0.0     0.0  0.0  0.0            0.0  0.0  0.0  ...   0.0   \n",
-      "\n",
-      "   withdrawal  withdrawal debit  withdrawal pos   wm  wm superc  \\\n",
-      "0         0.0               0.0             0.0  0.0        0.0   \n",
-      "1         0.0               0.0             0.0  0.0        0.0   \n",
-      "2         0.0               0.0             0.0  0.0        0.0   \n",
-      "3         0.0               0.0             0.0  0.0        0.0   \n",
-      "4         0.0               0.0             0.0  0.0        0.0   \n",
-      "\n",
-      "   wm supercenter  www  www doordash  york  \n",
-      "0             0.0  0.0           0.0   0.0  \n",
-      "1             0.0  0.0           0.0   0.0  \n",
-      "2             0.0  0.0           0.0   0.0  \n",
-      "3             0.0  0.0           0.0   0.0  \n",
-      "4             0.0  0.0           0.0   0.0  \n",
-      "\n",
-      "[5 rows x 500 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# tfidf_features\n",
-    "# feature_names = tfidf_vectorizer.get_feature_names_out()\n",
-    "\n",
-    "# tfidf_df = pd.DataFrame(tfidf_features.toarray(), columns=feature_names)\n",
-    "\n",
-    "# print(tfidf_df.head())"
+    "print(tfidf_df)\n"
    ]
   }
  ],
