--- a/notebooks/kevin_data_exploration.ipynb
+++ b/notebooks/kevin_data_exploration.ipynb
@@ -2923,7 +2923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2941,7 +2941,7 @@
     "    pattern2 = r'(?<!#)X+|#X+'\n",
     "\n",
     "    # Handles unnecessary punctuation\n",
-    "    pattern3 = r\"[^a-zA-Z0-9\\s./]\"\n",
+    "    pattern3 = r\"[^a-zA-Z0-9\\s./@]\"\n",
     "\n",
     "    # get rid of the state at the end of the wording\n",
     "    pattern4 = r'\\s[A-Z]{2}$'\n",
@@ -4258,7 +4258,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4272,7 +4272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
